provider_modules/kubernetes/ingress_controller/alb_nginx_ingress/templates/nginx-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxservice
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
